--- a/cekin.html
+++ b/cekin.html
@@ -227,7 +227,7 @@
   success: function () {
     // Kalau berhasil, langsung ubah tombol
     $submitBtn.prop("disabled", true).text("Terkirim");
-    showMessage("✅ Terima kasih, absensi Anda telah tercatat.", "success");
+    showMessage("Terima kasih, absensi Anda telah tercatat.", "success");
     $form[0].reset();
   },
   error: function () {
@@ -256,5 +256,6 @@
 </body>
 
 </html>
+
 
 
